Fix alignment and size

--- a/scss/components/limit-box.scss
+++ b/scss/components/limit-box.scss
@@ -64,5 +64,8 @@
 }
 
 .limit-history-button {
+  position: relative;
+  top: -2px;
+
   cursor: pointer;
 }
